Reformat and change some of the assertions to use AssertJ in a more natural way